--- a/templates/education.html
+++ b/templates/education.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="education">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <h2>Education</h2>
     <ul>
         <li><b>SMP Dharma Putra</b> — 2016 - 2019</li>
