--- a/templates/skills.html
+++ b/templates/skills.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="skills">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <h2>Skills</h2>
 
     <!-- Hard Skills -->
