--- a/templates/project.html
+++ b/templates/project.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="projects">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <h2>My Projects</h2>
 
     <div class="project-item">
